# oju

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: docs.yml  tests.yml
_modules/: index.html
_modules/oju/: agent.html  providers.html
_sources/: index.rst.txt
_sources/development/: api.rst.txt  index.rst.txt
_sources/user/: getting-started.rst.txt  index.rst.txt  prompts.rst.txt  theory.rst.txt  usage.rst.txt
_sources/user/examples/: basic-usage.rst.txt  custom-prompts.rst.txt
development/: api.html  changelog.html  contributing.html  index.html
docs/: README.md  make.bat  requirements-docs.txt
docs/source/: conf.py
docs/source/development/: changelog.rst  contributing.rst
docs/source/user/: index.rst  installation.rst  usage.rst
docs/source/user/examples/: index.rst  multiple-providers.rst
oju/: agent.py  providers.py
oju/prompts/backend_coding_agent/: prompt.txt
oju/prompts/frontend_coding_agent/: prompt.txt
tests/: __init__.py  conftest.py  test_agent.py  test_providers.py
user/: getting-started.html  index.html  installation.html  prompts.html  theory.html  usage.html
user/examples/: basic-usage.html  custom-prompts.html  index.html  multiple-providers.html
