[metadata]
description-file = README.md
license_files = LICENSE

[flake8]
max-line-length = 88
extend-ignore = E203
per-file-ignores =
    # Allow non-abstract empty methods in abstract base classes
    tests/*.py: S101,S102,S106,S108
    oju/__init__.py: E402

exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    .tox,
    .venv,
    venv

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool:pytest]
testpaths = tests
addopts = -ra -q --cov=oju --cov-report=term-missing
python_files = test_*.py

[coverage:run]
source = oju
omit = 
    */tests/*
    */__init__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
    @abstractmethod
    @property
    @classmethod
    @staticmethod
    def __

[egg_info]
tag_build = 
tag_date = 0
